# petr4

./: .gitignore  .gitmodules  .lia.cache  .travis.yml  404.html  CONTRIBUTORS  Dockerfile  LICENSE  Makefile  README.md  _CoqProject  abc.p4  abc.v  acl-FrontEnd_1_ParseAnnotationBodies.p4  acl-FrontEnd_4_CreateBuiltins.p4  action-bind-FrontEnd_35_MoveDeclarations.p4  action-bind-LocalizeAllActions_4_DuplicateActions.p4  action-bind-LocalizeAllActions_5_RemoveAllUnusedDeclarations.p4  action-bind-PassRepeated_1_RemoveUnusedDeclarations.p4  action-bind-RemoveActionParameters_1_TypeChecking.p4  action-bind-RemoveDontcareArgs_0_TypeChecking.p4  action-bind-SimplifyControlFlow_1_DoSimplifyControlFlow.p4  action-bind-UniqueParameters_1_(anonymous namespace)::FindActionCalls.p4  action-synth-CheckCoreMethods_0_TypeChecking.p4  action-synth-EvaluatorPass_1_Evaluator.p4  action-synth-FrontEnd_14_ValidateMatchAnnotations.p4  action-synth-FrontEnd_4_CreateBuiltins.p4  action-synth-FrontEnd_53_InlineActions.p4  action-synth-FrontEnd_61_SimplifyControlFlow.p4  action-synth-InlinePass_2_InlineDriver.p4  action-synth-LocalizeAllActions_4_DuplicateActions.p4  action-synth-MidEnd_4_RemoveExits.p4  action-synth-MidEnd_9_HandleNoMatch.p4  action-synth-P4::TypeChecking_1_TypeInference.p4  action-synth-PassRepeated_3_RemoveUnusedDeclarations.p4  action-synth-SimplifyParsers_1_DoSimplifyParsers.p4  action-two-params-FrontEnd_11_(anonymous namespace)::SetStrictStruct.p4  action-two-params-FrontEnd_25_SpecializeGenericFunctions.p4  action-two-params-FrontEnd_41_SimplifyDefUse.p4  action-two-params-FrontEnd_5_ResolveReferences.p4  (+12213 more)
.github/scripts/: build-petr4-macos.sh  build-petr4-ubuntu.sh  build-poulet4-macos.sh  build-poulet4-ubuntu.sh  compare-stf-res.sh  compare-typecheck-res.sh  stf-test-petr4-vs-p4c.sh  test-frontend.sh  test-gcl-compiler.sh  typecheck-petr4-vs-p4c.sh
.github/workflows/: bld-poulet4.yml  build-petr4.yml  build-poulet4.yml  ci-stf-test.yml  ci-typechecker.yml  compiler-tests.yml  diff-test.yml  p4-impls-diff-test.yml  poulet4-build.yml  push-petr4-docker-img.yml
ast/: index.html  index.xml
categories/: index.html  index.xml
ccomp/: .gitignore  Makefile  _CoqProject  test.v
ccomp/extraction/: Camlcoq.ml  Extract.v  PrintClight.ml  dune
cimpl/: cimpl.opam  dune-project
cimpl/lib/: ast.ml  dune  tocimpl.ml
cimpl/test/: dune
cimport/: dune  dune~  raw_socket.c  raw_socket.c~  sockets.ml  sockets.mli  sockets.mli~
claims/: index.html  index.xml
content/: _index.md
content/ast/: _index.md
content/claims/: _index.md
content/contributors/: _index.md
content/installation/: _index.md
content/targets/: _index.md
content/usage/: _index.md
contributors/: index.html  index.xml
coq/: .gitignore
coq/extraction/: Extract.v  dummy.sh  dune  zarith.ml
coq/lib/: dune
core/: AST.v  Check.v  Makefile  _CoqProject  ast.ml  collect.ml  dune  inline.ml  util.ml
css/: ace.min.css
ctrl_configs/: single_entry.json
docs/: bugs.csv  types.tex
docs/notes/: ir.txt  types.tex
docs/petr4spec/: Makefile  Petr4-spec-app.mdk  Petr4-spec-dcl.mdk  Petr4-spec-exp.mdk  Petr4-spec-intro.mdk  Petr4-spec-notation.mdk  Petr4-spec-overview.mdk  Petr4-spec-stmt.mdk  Petr4-spec.mdk  README.md  make.bat  ops.tex
docs/specification/: Makefile  petr4-big-step.mdk  petr4-full.mdk  petr4-three-context.mdk  petr4.mdk  styleguide.mdk  target.md
examples/: core.p4  deadcode.p4  ebpf_model.p4  helloWorld.p4  hello_world.c  hello_world.p4  lpm-example-for-artifact-eval.p4  lpm-example-for-artifact-eval.stf  mininet-test.p4  mininet_if_test.p4  msa.up4  test1.txt  tna.p4  tofino.p4  tofino1arch.p4  up4.p4  xdp_model.p4
examples/bugs/: deadcode.p4  inference_state.p4  no_direction.p4  return_out.p4  wrong_default.p4
examples/c_tests/: petr4-runtime.c  petr4-runtime.h  simple-denested.p4  simple.c  simple.p4
examples/checks/: decls.p4  lambdas.p4
examples/compile_tests/: add.p4  addint.p4  drop.p4  ecmp_2_noselector.p4  emit.p4  extract.p4  flowlet_sized_ints.p4  flowlet_switching_16_sized_ints.p4  heavy_hitter_1.p4  heavy_hitter_2_sized_ints.p4  helloWorld.p4  int_arith.p4  issue894_16_sized_ints.p4  linearroad_16_sized_ints_no_range.p4  mc_nat_16.p4  mulint.p4  ndp_router_16.p4  netpaxos_acceptor_16_sized_ints.p4  ts_switching_16_no_range.p4
examples/extra_tests/: bloomfilter.p4  register.p4  tfarch.p4  tparam.p4  typedef.p4
examples/failing_compile_tests/: arp_no_consts_sized_ints.p4  arp_sized_insts.p4  hula_no_consts.p4  netchain_16.p4
examples/inference/: 16.2Example.p4  initialize_generic.p4  nested_call_no_wildcards.p4  untypedInt.p4
examples/table_opt_tests/: merge.p4  prod.p4
examples/up4/: blah.p4  drop.txt  (+25 more)
extraction/: poulet4.opam
html_build/: all_examples.html  index.html  load_file.js  web.bc.js
installation/: index.html  index.xml
lib/: .merlin  Bigint.ml  Bigint.mli  Environment.v  Eval.v  Step.v  Syntax.v  Unpack.v  Utils.v  Value.v  ast.ml  bitstring.ml  bitstring.mli  c_mapping.ml  ccomp.ml  checker.ml  checker.mli  checkerInverse.ml  checker_env.ml  cimpl.ml  cimpl.mli  cimpl.mli~  cimpl.ml~  common.ml  common.mli  compcertalize.ml  context.ml  context.mli  core.ml  coreAst.ml  core_types.ml  cprinter.ml  csyntax.ml  default.ml  dune  ebpf.ml  ebpf.mli  elaborate.ml  env.ml  env.mli  (+72 more)
lib/Monads/: Interp.v  Monad.v  State.v
lib/Platform/: Packet.v
mininet_scripts/: README.md
p4c_manual/: config.h
p4stf/: dune  test.ml
packets/: packet2.txt  sample_packet.txt
python/: trivial.py
stf-test/: ast.ml  dune  test.ml  test_lexer.mll  test_parser.mly
tags/: index.html  index.xml
targets/: index.html  index.xml
test/: ast.ml  checker_tests.ml  claims.py  dune  lexer.ml  lexer.mll  parser.mly  parser_tests.ml  test.ml
triage/: checker_failures.csv  excluded.csv  failures.csv  failures.txt  unsupported.csv  util.sh
unix/: dune  runtime_server.ml  runtime_server.mli  server.ml
unroll-test/: canon_irreducible.p4  one_inf.p4  one_loop.p4
usage/: index.html  index.xml
web/: Makefile  bake.ml  dune  kebede.ml  pack.ml  web.ml
(+5034 files in other folders)
