opam-version: "2.0"
version: "0.1"
synopsis: "Petr4: Formal Semantics for the P4 Programming Language"
maintainer: "jnfoster@cs.cornell.edu"
authors: ["Nate Foster <jnfoster@cs.cornell.edu>"]
homepage: "https://github.com/cornell-netlab/petr4"
dev-repo: "git+https://github.com/cornell-netlab/petr4/"
bug-reports: "https://github.com/cornell-netlab/petr4/issues"
license: "Apache2"
build: [
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune"
  "menhir"
  "bignum"
  "core"
  "core_extended"
  "ppx_deriving_yojson"
  "ppx_jane"
  "yojson"
]

