opam-version: "2.0"
version: "0.1.2"
synopsis: "Petr4: Formal Semantics for the P4 Programming Language"
maintainer: "jnfoster@cs.cornell.edu"
authors: ["Nate Foster <jnfoster@cs.cornell.edu>"]
homepage: "https://github.com/cornell-netlab/petr4"
dev-repo: "git+https://github.com/cornell-netlab/petr4/"
bug-reports: "https://github.com/cornell-netlab/petr4/issues"
license: "Apache2"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml-poulet4"
  "alcotest"
  "bignum"
  "ocaml" {>= "4.09.1"}
  "dune" {>= "1.2"}
  "cstruct"
  "cstruct-sexp"
  "menhir"
  "ANSITerminal"
  "core" {>= "0.13.0"}
  "ppx_deriving_yojson"
  "ppx_import" {>= "0.13.0" }
  "ppx_jane" {>= "0.13.0" }
  "ppx_js_style" {>= "0.13.0" }
  "yojson" {>= "1.7.0"}
  "js_of_ocaml"
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"
  "p4pp" {>= "0.1.5"}
  "odoc"
]
