(menhir
  (flags --no-stdlib --explain)
  (modules parser))

(menhir
  (flags --explain)
  (modules stf_parser))

(ocamllex (modules lexer stf_lexer))

(library
  (public_name petr4)
  (name petr4)
  (libraries core_kernel bignum poulet4 ppx_deriving_yojson.runtime yojson cstruct-sexp poulet4_Ccomp)
  (preprocess
    (staged_pps ppx_import ppx_jane ppx_deriving_yojson ppx_deriving.show)))
