(menhir
  (flags --no-stdlib --explain)
  (modules p4parser))

(menhir
  (flags --explain)
  (modules stf_parser))

(ocamllex (modules lexer stf_lexer))

(library
  (public_name petr4)
  (name petr4)
  (libraries core core_kernel core_unix ANSITerminal bignum poulet4 ppx_deriving_yojson.runtime yojson cstruct-sexp poulet4_Ccomp pp)
  (preprocess
    (staged_pps ppx_import ppx_jane ppx_deriving_yojson ppx_deriving.show)))
