(coq.extraction
 (prelude Extract)
 (theories Poulet4)
 (extracted_modules
   AST
   AST0
   Archi
   Ascii
   Auxiliary
   Basics
   Binary
   BinarySingleNaN
   BinInt
   BinNat
   BinNums
   BinPos
   BinPosDef
   Bits
   Bool
   Byte
   CCompEnv
   CCompSel
   CV1Model
   Cconsts
   Clight
   Clightdefs
   Cop
   Coqlib
   Csyntax
   Ctypes
   Ctypesdefs
   Datatypes
   Decimal
   Defs
   Envn
   Equality
   EquivDec
   EquivUtil
   Errors
   Floats
   Globalenvs
   Hexadecimal
   IdentGen
   IEEE754_extra
   Integers
   List0
   ListUtil
   Maps
   Memdata
   Memory
   Memtype
   Monad
   Nat
   Number
   Operations
   P4Field
   P4Int
   P4String
   Petr4Runtime
   RecordSet
   Result
   Round
   Smallstep
   SpecFloat
   Specif
   State
   String0
   Values
   ZArith_dec
   Zaux
   Zbits
   Zbool
   Zpower
   )
 (libraries zarith bignum))

(library 
  (name poulet4_Ccomp)
  (public_name poulet4_Ccomp)
  (libraries bignum zarith str)
  (flags (:standard -w -33)))
