(coq.extraction
 (prelude Extract)
 (theories Poulet4)
 (extracted_modules
   AST
   AST0
   Archi
   Ascii
   Auxiliary
   base
   Basics
   BinInt
   BinNat
   BinNums
   BinPos
   BinPosDef
   Binary
   BinarySingleNaN
   Bits
   Bool
   Byte
   CCompEnv
   CCompSel
   CV1Model
   Cconsts
   Clight
   Clightdefs
   Cop
   Coqlib
   countable
   Csyntax
   Ctypes
   Ctypesdefs
   Datatypes
   Decimal
   Defs
   Envn
   Equality
   EquivDec
   EquivUtil
   Errors
   fin_maps
   Floats
   Globalenvs
   gmap
   Hexadecimal
   IEEE754_extra
   Integers
   List0
   ListUtil
   Maps
   Memdata
   Memory
   Memtype
   Monad
   NameGen
   Nat
   Number
   numbers
   Operations
   option
   P4Field
   P4Int
   P4String
   Petr4Runtime
   pmap
   pretty
   RecordSet
   Result
   Round
   Smallstep
   SpecFloat
   Specif
   State
   String0
   stringmap
   strings
   Values
   ZArith_dec
   Zaux
   Zbits
   Zbool
   Zpower
   )
 (libraries zarith bignum))

(library 
  (name poulet4_Ccomp)
  (public_name poulet4_Ccomp)
  (libraries bignum zarith str)
  (flags (:standard -w -33)))
